--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-color: var(--bg-color);
+    /*background-color: var(--bg-color);*/
     background-size: cover;
     color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
